[package]
name = "rust-postgresql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres"] }
